attempt to fix display issues on mobile sizes

--- a/public/stylesheets/mcminn.css
+++ b/public/stylesheets/mcminn.css
@@ -2,8 +2,6 @@
 
 * {
 	font-family: 'Oswald', sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
 }
 
 html {
@@ -22,6 +20,10 @@ html {
 .page-footer a {
 	text-decoration: none;
 	color: inherit;
+}
+
+#mcminnpic {
+	max-width: 100%;
 }
 
 #contact-h1 {
